<resources>

    <string name="app_name">EventMe</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_search">Suche</string>
    <string name="action_friends">Freundesliste</string>
    <string name="action_events">Archivierte Events</string>
    <string name="action_logout">Abmelden</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="action_comment">Kommentieren</string>
    <string name="action_delete">Löschen</string>
    <string name="action_impressum">Impressum</string>

    <!-- LOGIN SCREEN -->
    <string name="login_email">Email</string>
    <string name="login_password">Passwort</string>
    <string name="login_registration">Registrieren</string>
    <string name="login_button">Anmelden</string>

    <!-- REGISTRATION SCREEN -->
    <string name="registration_name">Name</string>
    <string name="registration_prename">Vorname</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Passwort</string>
    <string name="registration_password_repeat">Passwort wiederholen</string>
    <string name="registration_button">Registrieren</string>
    <string name="registration_cancel_button">Abbrechen</string>

    <!-- EDIT TASK SCREEN -->
    <string name="edit_task_quantity">Menge ändern</string>
    <string name="edit_task_name">Aufgabenname ändern</string>
    <string name="edit_task_quantity_text">Menge:</string>
    <string name="edit_task_note">Kommentar</string>
    <string name="edit_task_previous_note_header">Verlauf:</string>

    <!-- EDIT EVENT DIALOG -->
    <string name="edit_event_message">Event bearbeiten</string>
    <string name="edit_event_date">Datum ändern</string>
    <string name="edit_event_name">Eventame ändern</string>
    <string name="edit_event_location">Location ändern</string>
    <string name="edit_event_ok">Aktualisieren</string>
    <string name="edit_event_cancel">Abbrechen</string>

    <!-- NEW TASK SCREEN -->
    <string name="new_task_quantity">Menge</string>
    <string name="new_task_note">Kommentar</string>
    <string name="new_task_name">Aufgabe</string>
    <string name="new_task_editor">Bearbeiter:</string>
    <string name="new_task_finish_button">Erstellen</string>

    <!-- NEW EVENT SCREEN -->
    <string name="new_event_date">Datum:</string>
    <string name="new_event_name">Event</string>
    <string name="new_event_location">Location</string>
    <string name="new_event_finish_button">Erstellen</string>

    <!-- FRIENDSLIST SCREEN -->
    <string name="friendslist_search">Freund suchen</string>

    <!-- SEARCH SCREEN -->
    <string name="search_header">Suchen</string>
    <string name="search_search_button">Suchen</string>

    <!-- DIALOG SCREEN PERCENTAGE -->
    <string name="dialog_percentage_header">Erledigt (%)</string>

    <!-- DIALOG SCREEN COSTS -->
    <string name="dialog_costs_header">Kosten</string>
    <string name="dialog_costs_new">Neu</string>
    <string name="dialog_costs_add">Hinzufügen</string>
    <string name="dialog_costs_cancel">Abbrechen</string>

    <!-- DIALOG SCREEN LOGOUT -->
    <string name="dialog_logout_message">Wollen Sie sich wirklich abmelden?</string>
    <string name="dialog_logout_ok">Ja</string>
    <string name="dialog_logout_cancel">Nein</string>

    <!-- DIALOG DELETE TASK -->
    <string name="dialog_delete_task_message">Wollen Sie die Aufgabe wirklich löschen?</string>
    <string name="dialog_delete_task_ok">Ja</string>
    <string name="dialog_delete_task_cancel">Nein</string>

    <!-- DIALOG DELETE TASK -->
    <string name="dialog_delete_event_message">Wollen Sie das Event wirklich löschen?</string>
    <string name="dialog_delete_event_ok">Ja</string>
    <string name="dialog_delete_event_cancel">Nein</string>

    <!-- DIALOG COMMENT -->
    <string name="dialog_comment_message">Kommentar</string>
    <string name="dialog_comment_ok">Posten</string>
    <string name="dialog_comment_cancel">Abbrechen</string>

    <!-- DIALOG EDIT TASK -->
    <string name="dialog_edit_task_message">Aufgabe bearbeiten</string>
    <string name="dialog_edit_task_ok">Aktualisieren</string>
    <string name="dialog_edit_task_cancel">Abbrechen</string>

    <!-- DIALOG EDIT EVENT -->
    <string name="dialog_edit_event_message">Was wollen Sie mit dem Event machen?</string>
    <string name="dialog_edit_event_delete">Löschen</string>
    <string name="dialog_edit_event_cancel">Abbrechen</string>
    <string name="dialog_edit_event_archiv">Archivieren</string>

    <!-- IMPRESSUM-->
    <string name="impressum_header">Impressum</string>
    <string name="impressum_contact_header">Kontakt</string>
    <string name="impressum_contact_tmg">Angaben gemäß §5 TMG:</string>
    <string name="impressum_contact_name">Sebastian Petöcz</string>
    <string name="impressum_contact_adresse">Goethestraße 4</string>
    <string name="impressum_contact_city">78120 Furtwangen</string>
    <string name="impressum_policy_header">Datenschutz</string>
    <string name="impressum_policy_1">Die Nutzung meiner App ist nur mit Angaben personenbezogener Daten möglich. Diese Daten werden ausdrücklich nicht an Dritte weitergegeben.
        Ich weise darauf hin, dass die Datenübertragung im Internet immer Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten
        vor dem Zugriff durch Dritte ist nicht möglich.</string>
    <string name="impressum_policy_2">
        Der Nutzung von im Rahmen der Impressumspflicht veröffentlichen Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angefordeter Werbung
        und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Der Betreiber der Seite behält sich ausdrücklich rechtliche Schritte im Falle der unverlangten
        Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.</string>

</resources>
