<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/action_search"
          app:showAsAction="never" />
    <item android:id="@+id/action_friends"
          android:icon="@drawable/friends"
          android:title="@string/action_friends"
          app:showAsAction="never" />
    <item android:id="@+id/action_archived_events"
          android:icon="@drawable/archivicon"
          android:title="@string/action_events"
          app:showAsAction="never" />
    <item android:id="@+id/action_logout"
          android:icon="@drawable/logout"
          android:title="@string/action_logout"
          app:showAsAction="never" />
</menu>