<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:background="@color/background">
    <EditText
            android:id="@+id/editTextEditEventChangeEventNameField"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/edit_event_name" android:backgroundTint="@color/white" android:textColorHint="@color/white"
            android:textColor="@color/white"/>
    <EditText
            android:id="@+id/editTextEditEventChangeLocationField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/edit_event_location" android:inputType="text" android:backgroundTint="@color/white"
            android:textColor="@color/white" android:textColorHint="@color/white"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/edit_event_date"
                android:layout_weight="0.18"
                android:id="@+id/textView17" android:textColor="@color/white" android:layout_gravity="center_vertical"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textViewNewEventDateField" android:layout_gravity="center_vertical" android:layout_weight="0.4"
                android:textColor="@color/white"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/calender_icon_button"
                android:id="@+id/imageButtonNewEventDate" android:background="@drawable/icons_shape_red"
                android:focusableInTouchMode="false" android:layout_marginBottom="5dp"/>
    </LinearLayout>
</LinearLayout>